--- a/Concurso_VagaCerta/Front_concurso/TI-II/codigo/public/homepage.html
+++ b/Concurso_VagaCerta/Front_concurso/TI-II/codigo/public/homepage.html
@@ -40,6 +40,11 @@
                         <img src="./assets/images/book-alt.png" class="biblioteca"> BIBLIOTECA
                     </a>
                 </div>
+                <div class="caixa">
+                    <a href="edital.html">
+                        <img src="./assets/images/marca-paginas.png" class="footer"> Editais
+                    </a>
+                </div>
             </div>
             <div class="linha">
                 <div class="linhaespecial">
