--- a/Concurso_VagaCerta/public/VagaCerta/src/main/resources/ti-1-ppl-cc-m-20242-g7-concursos-master/ti-1-ppl-cc-m-20242-g7-concursos-master/codigo/public/cadastrodeconcurso.html
+++ b/Concurso_VagaCerta/public/VagaCerta/src/main/resources/ti-1-ppl-cc-m-20242-g7-concursos-master/ti-1-ppl-cc-m-20242-g7-concursos-master/codigo/public/cadastrodeconcurso.html
@@ -50,6 +50,10 @@
             <div class="form-group">
                 <input type="text" id="localizacao" name="localizacao" placeholder="Localização">
             </div>
+            
+            <div class="form-group">
+                <input type="text" id="cargo" name="cargo" placeholder="cargo">
+            </div>
 
             <div class="form-group">
                 <input type="text" id="horario" name="horario" placeholder="Horário">
