CRUD LIVROS, EDITAL E CONCURSO

--- a/Concurso_VagaCerta/Front_concurso/TI-II/codigo/public/homepage.html
+++ b/Concurso_VagaCerta/Front_concurso/TI-II/codigo/public/homepage.html
@@ -54,6 +54,9 @@
                     <div class="caixaespecial">
                             <a href="cadastrodeconcurso.html"><img src="./assets/images/cadastrodeconcurso.png" class="cadastrodelivro"> CADASTRO DE CONCURSOS</a>
                     </div>
+                    <div class="caixaespecial">
+                        <a href="cadastrodequestoes.html"><img src="./assets/images/cadastrodeconcurso.png" class="cadastrodelivro"> CADASTRO DE QUESTÕES</a>
+                    </div>
                 </div>
             </div>
         </div>
